copied navbar, home and about section from previous copy of portfolio

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Abubakar-Porfolio</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+          <img src="../Images/logo.png" alt="logo" />
+          <ul class="nav_menu">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <section class="home">
+        <div class="container">
+          <h2>Hey,</h2>
+          <h1>I'm Muhammad <span>Abubakar</span> Khan!</h1>
+          <h3>
+            Bridging <span>Creativity</span> and <span>Code</span> to Deliver
+            Exceptional Web Solutions
+          </h3>
+          <button>About me</button>
+          <button>Contact me</button>
+        </div>
+      </section>
 </body>
 </html>
