Homepage, Contact Page Added

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>Contact Page</title>
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/typography.css" />
     <link rel="stylesheet" href="../CSS/navbar.css" />
-    <link rel="stylesheet" href="../CSS/home-section.css" />
+    <link rel="stylesheet" href="../CSS/contact.css" />
   </head>
   <body>
     <header>
@@ -22,17 +22,17 @@
         </ul>
       </nav>
     </header>
-    <section class="home">
-      <div class="container">
-        <h2>Hey,</h2>
-        <h1>I'm Muhammad <span>Abubakar</span> Khan!</h1>
-        <h3>
-          Bridging <span>Creativity</span> and <span>Code</span> to Deliver
-          Exceptional Web Solutions
-        </h3>
-        <button>About me</button>
-        <button>Contact me</button>
-      </div>
+    <section class="contact">
+      <h2>Contact Now</h2>
+      <form action="">
+        <h3>Let's Connect!</h3>
+        <input type="text" name="user-name" placeholder="Name" />
+        <input type="tel" name="user-phone" placeholder="Phone Number" />
+        <input type="email" name="user-email" placeholder="Email Address" />
+        <input type="text" name="Subject" placeholder="Subject"/>
+        <input type="text" name="Your Message" placeholder="Your Message"/>
+        <div><button>Submit</button></div>
+      </form>
     </section>
   </body>
 </html>
