--- a/HTML/about-page.html
+++ b/HTML/about-page.html
@@ -16,7 +16,7 @@
           <li><a href="../HTML/index.html">Home</a></li>
           <li><a href="../HTML/about-page.html">About</a></li>
           <li><a href="">Services</a></li>
-          <li><a href="">Projects</a></li>
+          <li><a href="../HTML/projects.html">Projects</a></li>
           <li><a href="">Contact</a></li>
         </ul>
       </nav>
