Now some changes completed

--- a/HTML/about-page.html
+++ b/HTML/about-page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About me</title>
     <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/typography.css" />
     <link rel="stylesheet" href="../CSS/navbar.css" />
     <link rel="stylesheet" href="../CSS/about-page.css" />
   </head>
@@ -15,9 +16,9 @@
         <ul class="nav_menu">
           <li><a href="../HTML/index.html">Home</a></li>
           <li><a href="../HTML/about-page.html">About</a></li>
-          <li><a href="">Services</a></li>
+          <li><a href="../HTML/services.html">Services</a></li>
           <li><a href="../HTML/projects.html">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="../HTML/contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
