--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -15,9 +15,9 @@
           <ul class="nav_menu">
             <li><a href="../HTML/index.html">Home</a></li>
             <li><a href="../HTML/about-page.html">About</a></li>
-            <li><a href="">Services</a></li>
+            <li><a href="../HTML/services.html">Services</a></li>
             <li><a href="../HTML/projects.html">Projects</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="../HTML/contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
