--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -40,7 +40,7 @@
           <div><button>Submit</button></div>
         </form>
         <div class="social">
-          <h1>Follow us</h1>
+          <h1>Follow me on : </h1>
           <a href="#" class="fa fa-linkedin" target="_blank"></a>
           <a href="#" class="fa fa-github" target="_blank"></a>
           <a href="#" class="fa fa-twitter" target="_blank"></a>
