some minor changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="navbar">
         <img src="../Images/logo.png" alt="logo" />
         <ul class="nav_menu">
-          <li><a href="../HTML/index.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="../HTML/about-page.html">About</a></li>
           <li><a href="../HTML/services.html">Services</a></li>
           <li><a href="../HTML/projects.html">Projects</a></li>
@@ -32,6 +32,35 @@
         </h3>
         <button>About me</button>
         <button>Contact me</button>
+      </div>
+    </section>
+    <section class="journeysection">
+      <h1>Journey and Impact</h1>
+      <p>
+        Discover my noteworthy engagements, meaningful contributions, and
+        impactful initiatives that shaped my journey.
+      </p>
+      <div class="journeysection-items">
+        <div>
+          <img src="" alt="" />
+          <h3></h3>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h3></h3>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h3></h3>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h3></h3>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h3></h3>
+        </div>
       </div>
     </section>
   </body>
