--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -19,7 +19,7 @@
       <nav class="navbar">
         <img src="../Images/logo.png" alt="logo" />
         <ul class="nav_menu">
-          <li><a href="../HTML/index.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="../HTML/about-page.html">About</a></li>
           <li><a href="../HTML/services.html">Services</a></li>
           <li><a href="../HTML/projects.html">Projects</a></li>
