--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/navbar.css" />
-    <link rel="stylesheet" href="../CSS/projects.css">
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/typography.css" />
+    <link rel="stylesheet" href="./CSS/navbar.css" />
+    <link rel="stylesheet" href="./CSS/projects.css">
 </head>
 <body>
     <header>
@@ -14,10 +15,10 @@
           <img src="../Images/logo.png" alt="logo" />
           <ul class="nav_menu">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="../HTML/about-page.html">About</a></li>
-            <li><a href="../HTML/services.html">Services</a></li>
-            <li><a href="../HTML/projects.html">Projects</a></li>
-            <li><a href="../HTML/contact.html">Contact</a></li>
+          <li><a href="./HTML/about-page.html">About</a></li>
+          <li><a href="./HTML/services.html">Services</a></li>
+          <li><a href="./HTML/projects.html">Projects</a></li>
+          <li><a href="./HTML/contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
