--- a/index.html
+++ b/index.html
@@ -1,67 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
-    <link rel="stylesheet" href="./CSS/style.css" />
-    <link rel="stylesheet" href="./CSS/typography.css" />
-    <link rel="stylesheet" href="./CSS/navbar.css" />
-    <link rel="stylesheet" href="./CSS/home-section.css" />
-  </head>
-  <body>
-    <header>
-      <nav class="navbar">
-        <img src="../Images/logo.png" alt="logo" />
-        <ul class="nav_menu">
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./HTML/about-page.html">About</a></li>
-          <li><a href="./HTML/services.html">Services</a></li>
-          <li><a href="./HTML/projects.html">Projects</a></li>
-          <li><a href="./HTML/contact.html">Contact</a></li>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./CSS/navbar.css">
+
+</head>
+
+<body>
+  <header>
+    <nav class="navbar" aria-label="Main Navigation">
+        <img src="./Images/logo.png" alt="Company Logo" />
+        <div class="hamburger" onclick="toggleMenu()" aria-label="Toggle Navigation Menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
+        <ul class="nav_menu" id="navMenu" role="menu">
+            <li role="none"><a href="./index.html" role="menuitem">Home</a></li>
+            <li role="none"><a href="./HTML/about-page.html" role="menuitem">About</a></li>
+            <li role="none"><a href="./HTML/services.html" role="menuitem">Services</a></li>
+            <li role="none"><a href="./HTML/projects.html" role="menuitem">Projects</a></li>
+            <li role="none"><a href="./HTML/contact.html" role="menuitem">Contact</a></li>
         </ul>
-      </nav>
-    </header>
-    <section class="home">
-      <div class="container">
-        <h2>Hey,</h2>
-        <h1>I'm Muhammad <span>Abubakar</span> Khan!</h1>
-        <h3>
-          Bridging <span>Creativity</span> and <span>Code</span> to Deliver
-          Exceptional Web Solutions
-        </h3>
-        <button>About me</button>
-        <button>Contact me</button>
-      </div>
-    </section>
-    <section class="journeysection">
-      <h1>Journey and Impact</h1>
-      <p>
-        Discover my noteworthy engagements, meaningful contributions, and
-        impactful initiatives that shaped my journey.
-      </p>
-      <div class="journeysection-items">
-        <div>
-          <img src="" alt="" />
-          <h3></h3>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <h3></h3>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <h3></h3>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <h3></h3>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <h3></h3>
-        </div>
-      </div>
-    </section>
-  </body>
+    </nav>
+</header>
+  <script src="./CSS/script.js"></script>
+</body>
+
 </html>
